--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -35,6 +35,7 @@
 - username: filipac
 - username: Francismori7
 - username: gercheq
+- username: gladiatorAsh
 - username: Glavic
 - username: grzesiek
 - username: henningda
