Add @jasonblalock to the list of contributors

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -43,6 +43,7 @@
 - username: igorescobar
 - username: ikanedo
 - username: iplus
+- username: jasonblalock
 - username: jazzzz
 - username: jcnmulio
 - username: jhadenfeldt
